@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-872: Minor inconsistencies with netty handler logic after netty 4 upgrade
+  (cmuchinsky via claudio)
+
   GIRAPH-871: Map task jvm never exits since netty 4 upgrade (cmuchinsky via claudio)
 
   GIRAPH-869: Log Vertex/Edge Count for All Workers (yhdong via majakabiljo)
